infra: add "Get apk info" to workflow

--- a/.github/workflows/flutter_workflow.yaml
+++ b/.github/workflows/flutter_workflow.yaml
@@ -37,13 +37,13 @@ jobs:
           flutter pub get
           flutter pub outdated
 
-      - name: Verify formatting
+      - name: "Check: Dart formatting"
         run: dart format --output=none --set-exit-if-changed .
 
-      - name: Flutter Analyze
+      - name: "Check: Flutter Analyze"
         run: flutter analyze --no-pub --no-fatal-infos --fatal-warnings
 
-      # - name: Flutter Test
+      # - name: "Check: Flutter tests"
       #   run: flutter test
 
   build_apk:
@@ -114,3 +114,23 @@ jobs:
       - name: "DEBUG: Flutter state"
         run: flutter doctor -v
 
+      - name: Get apk info
+        id: apk-info
+        uses: hkusu/apk-info-action@v1
+        with:
+          apk-path: "build/app/outputs/flutter-apk/${{ env.APP_FILENAME }}.apk"
+      - name: "DEBUG: Show apk info"
+        run: |
+          echo 'application-name: ${{ steps.apk-info.outputs.application-name }}'
+          echo 'application-id: ${{ steps.apk-info.outputs.application-id }}'
+          echo 'version-code: ${{ steps.apk-info.outputs.version-code }}'
+          echo 'version-name: ${{ steps.apk-info.outputs.version-name }}'
+          echo 'min-sdk-version: ${{ steps.apk-info.outputs.min-sdk-version }}'
+          echo 'target-sdk-version: ${{ steps.apk-info.outputs.target-sdk-version }}'
+          echo 'compile-sdk-version: ${{ steps.apk-info.outputs.compile-sdk-version }}'
+          echo 'uses-permissions: ${{ steps.apk-info.outputs.uses-permissions }}'
+          echo 'debuggable: ${{ steps.apk-info.outputs.debuggable }}'
+          echo 'allow-backup: ${{ steps.apk-info.outputs.allow-backup }}'
+          echo 'supports-rtl: ${{ steps.apk-info.outputs.supports-rtl }}'
+          echo 'file-size: ${{ steps.apk-info.outputs.file-size }}'
+          echo 'readable-file-size: ${{ steps.apk-info.outputs.readable-file-size }}'
